<resources>
    <string name="app_name">Urban STeP</string>

    <string name="error">Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="msg_session_expired">Session is expired</string>
    <string name="msg_server_error">Hmmm… we can’t connect right now.We’ll get right on it.Please try again soon.</string>
    <string name="ok">OK</string>
    <string name="msg_token_expire">Your session is expired. Please login.</string>
    <string name="cancel">CANCEL</string>
    <string name="msg_delete_event">Are you sure you want to delete <b> %s </b> event?</string>
    <string name="msg_delete_permit">Are you sure you want to delete <b> %s </b> permit?</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="select_stackholders">Select Stakholders</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member Sign Up  NOW</string>
    <string name="forgot_password">Forget Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fullname">Full Name</string>
    <string name="residential_address">Residential Address</string>
    <string name="work_office">Work Office</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="source_of_income">Source of Income</string>
    <string name="organization">Organization</string>
    <string name="designation">Designation</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_login">Already Registerd ? LOGIN HERE</string>
    <string name="enter_emil_address">Enter your email address to recieve a link to create a new password</string>
    <string name="hint_email_address">Email Address</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="hint_enter_new_password">Enter New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="txt_password_validation">Password must be a min 8 characters,contain upper and lower case letters and numbers</string>
    <string name="nav_home">Home</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_governance">Governance</string>
    <string name="nav_ongoing_project">Ongoing Projects</string>
    <string name="contact">Contact Us</string>
    <string name="nav_emergency_contact">Emergency Contact</string>
    <string name="login_register">Login/Register</string>
    <string name="title_we_the_change">Urban STeP</string>
    <string name="title_about_us">ABOUT US</string>
    <string name="title_governance">GOVERNANCE</string>
    <string name="title_emergency_contact">EMERGENCY CONTACT</string>
    <string name="title_ongoing_projects">ONGOING PROJECTS</string>
    <string name="select_ward">Select Ward</string>
    <string name="select_ward_suggestion">Select Ward For Suggestion</string>
    <string name="hint_address">Address</string>
    <string name="hint_detail_desc">Detai Description</string>
    <string name="upload_image">Upload Images</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
    <string name="image_3">Image 3</string>
    <string name="submit">Submit</string>
    <string name="recent_suggestion">Recent Suggestion</string>
    <string name="title_suggestion">SUGGESTION</string>
    <string name="nav_suggestion">Suggestion</string>
    <string name="nav_complaint">Complaint</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_term_condition"><![CDATA[Term & Condition]]></string>
    <string name="nav_faq">FAQs</string>
    <string name="add_suggestion">ADD SUGGESTION</string>
    <string name="my_suggestion">My Suggestion</string>
    <string name="add_complaint">ADD COMPLAINT</string>
    <string name="recent_complaint">RECENT COMPLAINT</string>
    <string name="my_complaint">MY COMPLAINT</string>
    <string name="title_complaints">COMPLAINTS</string>
    <string name="nav_dashboard">Have something to say?</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_grievance">Grievance</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_query">Query</string>
    <string name="nav_update_us">Update Us</string>
    <string name="nav_discussion">Discussion</string>
    <string name="title_my_account">My Account</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_term_and_conditions">Term and Conditions</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_privacy_policy">PRIVACY POLICY</string>
    <string name="title_grievance_details">GRIEVANCE DETAIL</string>
    <string name="title_suggestion_details">SUGGESTION DETAIL</string>
    <string name="title_query_details">QUERY DETAIL</string>
    <string name="title_update_us_details">UPDATE US DETAIL</string>
    <string name="title_discussion_details">DISCUSSION DETAIL</string>
    <string name="title_feedback_details">FEEDBACK DETAIL</string>
    <string name="title_discussion">DISCUSSION</string>
    <string name="title_feedback">FEEDBACK</string>
    <string name="title_grievance">Grievance</string>
    <string name="title_query">QUERY</string>
    <string name="title_update_us">UPDATE US</string>
    <string name="zone">Zone</string>
    <string name="ward">Ward</string>
    <string name="category">Category</string>
    <string name="attach_photo_1">Attach Photo 1</string>
    <string name="attach_photo_2">Attach Photo 2</string>
    <string name="attach_photo_3">Attach Photo 3</string>
    <string name="address">Address</string>
    <string name="sub_category">Sub Category</string>
    <string name="suggestion">Suggestion</string>
    <string name="write_your_suggestion">Write Your Suggestion</string>
    <string name="query">Query</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="ongoing_topic">Ongoing Topic</string>
    <string name="other_topic">Other Topic</string>
    <string name="discuss">Discuss</string>
    <string name="projects">Projects</string>
    <string name="authority">Authority</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="thanks">THANKS !</string>
    <string name="submit_message">Your %s has been successfully submitted.</string>
    <string name="concerned_authority">Concarned Authority</string>
    <string name="submit_number">%s Number</string>
    <string name="search">Search</string>
    <string name="title_faq">FAQ</string>
    <string name="phone">Phone</string>
    <string name="salient_feature">Salient Features</string>
    <string name="know_your_area">Know Your Area</string>
    <string name="validation_email_empty">Email is empty</string>
    <string name="validation_email_format">Please enter valid email</string>
    <string name="select_head">Select Head</string>
    <string name="valid_head_empty">Please select head</string>
    <string name="valid_sub_head_empty">Please Select Sub Head</string>
    <string name="validation_password_empty">Password is empty</string>
    <string name="valid_confirm_pwd_empty">Confirm password is empty</string>
    <string name="valid_mismatch_pwd_empty">Password and Confirm Password is not matched</string>
    <string name="valid_full_name_empty">Full Name is empty</string>
    <string name="valid_resident_address_empty">Resident Address is empty</string>
    <string name="valid_work_office_empty">Work Office address is empty</string>
    <string name="valid_country_empty">Country is Empty</string>
    <string name="valid_state_empty">State is empty</string>
    <string name="valid_mobile_empty">Mobile Number is Empty</string>
    <string name="valid_organization_empty">Organization is empty</string>
    <string name="valid_designation_empty">Designation is empty</string>
    <string name="select_sub_head">Select Sub Head</string>
    <string name="valid_category_empty">Category is Empty</string>
    <string name="problem">Problem</string>
    <string name="valid_subcategory">Sub Category is Empty</string>
    <string name="valid_zone_empty">Zone is Empty</string>
    <string name="valid_ward_empty">Ward is Empty</string>
    <string name="valid_problem_empty">Problem is Empty</string>
    <string name="valid_photo_empty">Photo is Empty</string>
    <string name="valid_address_empty">Address is Empty</string>
    <string name="valid_suggestion_empty">Suggestion is Empty</string>
    <string name="valid_ongoing_topic">Ongoing Topic is Empty</string>
    <string name="valid_discuss_empty">Discussion is Empty</string>
    <string name="valid_projects">Select Project is Empty</string>
    <string name="valid_authority">Authority is Empty</string>
    <string name="valid_rating">Rating is Empty</string>
    <string name="valid_username">Username is Empty</string>
    <string name="logout">Logout</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="txt_yes">YES</string>
    <string name="txt_no">NO</string>
    <string name="welcome_user">Have something to say? - Welcome %s</string>
    <string name="name">Name</string>
    <string name="valid_date_of_birth">Date Of Birth is Empty</string>
    <string name="valid_gender_empty">Gender is Empty</string>
    <string name="valid_mobile_number_valid">Phone number is not valid</string>
    <string name="title_know_your_area">Know your area</string>
    <string name="zone_name">Zone Name:        %s</string>
    <string name="zone_number">Zone Number :     %s</string>
    <string name="ward_number">Ward Number :      %s</string>
    <string name="ward_name">Ward Name :    %s</string>
    <string name="colony_name">Colony Name:       %s</string>
    <string name="colony_category">Colony Category :     %s</string>
    <string name="from_stilts">From Stilts</string>
    <string name="from_basement">From Basement</string>
    <string name="total_no_of_floor">Total No. Of Floors</string>
    <string name="existing_floors">Existing Floors</string>
    <string name="new_floors_added">New Floors Added</string>
    <string name="name_of_the_industry">Name Of The Industry</string>
    <string name="other">Other</string>
    <string name="valid_other">Other is empty</string>
    <string name="say_something">Have something to say?</string>
    <string name="delhi_desc">Muncipal Corporation of Delhi  is trifurcated into: \\n     i. North Delhi Muncipal Corporation. \\n    ii.  South Delhi Muncipal Corporation. \\n iii.    East Delhi Corporation.</string>
    <string name="project_name">Name :     %s</string>
    <string name="project_description">Description :    %s</string>
    <string name="project_location">Location :     %s</string>
    <string name="project_feedback">Feedback:     %s</string>
    <string name="date_time">DateTime:    %s</string>
</resources>
