<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_zone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neuzeit_grotesk_w01_regular_0"
                android:singleLine="true"
                android:text="@string/zone_number"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_ward_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_zone_name"
                android:fontFamily="@font/neuzeit_grotesk_w01_regular_0"
                android:singleLine="true"
                android:text="@string/ward_number"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_colony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ward_name"
                android:fontFamily="@font/neuzeit_grotesk_w01_regular_0"
                android:text="@string/colony_name"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_zone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/neuzeit_grotesk_w01_regular_0"
                android:singleLine="true"
                android:text="@string/zone_name"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_ward_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_zone_number"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/neuzeit_grotesk_w01_regular_0"
                android:singleLine="true"
                android:text="@string/ward_name"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/tv_colony_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_ward_name"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/neuzeit_grotesk_w01_regular_0"
                android:singleLine="true"
                android:text="@string/colony_category"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>